# meridian-autonomous-ai-radar

./: .env.example  docker-compose.yml  pyproject.toml  requirements.txt
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
heartbeat/: briefing.json
patterns/seed/: advanced-rag-architectures.json  agent-evaluation-benchmarking.json  agent-memory-architectures.json  agentic-rag.json  ai-governance-compliance.json  ai-traceability-provenance.json  code-generation-agents.json  embedding-model-selection.json  fine-tuning-vs-prompting.json  human-ai-interaction-design.json  human-in-the-loop-agent-design.json  knowledge-graph-llm-integration.json  llm-cost-optimization.json  llm-evaluation-frameworks.json  llm-observability-tracing.json  multi-agent-orchestration.json  prompt-engineering-management.json  react-reasoning-action-loops.json  tool-use-function-calling.json  visual-orchestration-platforms.json
src/api/: auth.py  main.py
src/bootstrap/: seed_patterns.py
src/db/: client.py  schema.py
src/pipeline/: analyst.py  briefing.py  ingest.py  scout.py  translator.py
src/runtime/: claude_runner.py  tracer.py
tests/: conftest.py  test_analyst.py  test_briefing.py  test_briefing_routes.py  test_claude_runner.py  test_ingest.py  test_patterns.py  test_pipeline_tracing.py  test_schema.py  test_scout.py  test_tracer.py  test_translator.py  test_trigger.py  test_vault_routes.py
(+49 files in other folders)
